package inf5153.patterns1.business;

/**
 * Created by wflag on 2020-07-06.
 */
public interface ListObserver<T> {
    void update(T e);
}
